[package]
name = "sddrs"
version = "0.1.0"
edition = "2021"
authors = ["josef podany"]
repository = "https://github.com/jsfpdn/sdd-rs"
description = "Bottom-up sentential decision diagram compiler library."

[lib]
name = "sddrs"
path = "lib.rs"

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
tracing = { version = "0.1", features = ["attributes"] }
derive_more = { version = "1", features = ["from", "add", "add_assign"] }
thiserror = "2"
clap = { version = "4.5.4", features = ["derive"] }
bon = "3"

[dev-dependencies]
pretty_assertions = "1.4.1"
