[package]
name = "sddrs"
version = "0.1.1"
edition = "2021"
authors = ["Josef Podany"]
repository = "https://github.com/jsfpdn/sdd-rs"
description = "Bottom-up Sentential Decision Diagram compiler library."
keywords = [
    "knowledge-base",
    "boolean-functions",
    "decision-diagrams",
    "model-counting",
    "sdd",
]
categories = ["compilers", "data-structures", "mathematics"]
license = "BSD-3-Clause"

[lib]
name = "sddrs"
path = "lib.rs"

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
tracing = { version = "0.1", features = ["attributes"] }
derive_more = { version = "1", features = ["from", "add", "add_assign"] }
thiserror = "2"
clap = { version = "4.5.4", features = ["derive"] }
bon = "3"
rustc-hash = "2.1"
anyhow = "1.0"
tabled = "0.17.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
